--- a/templates/history.html
+++ b/templates/history.html
@@ -8,7 +8,7 @@ History
 <div class="flex flex-col w-full gap-10 text-slate-800 relative">
     <div class="absolute left-10 top-4">
         <a href="/"><img src="../assets/icons/back.svg" alt="back" onmouseover="addText('add')" onmouseout="addText('remove')"></a>
-        <p id="homeButton" class="bg-black bg-opacity-80 text-white rounded-md p-0.5 mt-0.5">Home</p>
+        <p id="homeButton" class="bg-black bg-opacity-80 text-white rounded-md p-0.5 mt-0.5 hidden">Home</p>
     </div>
     <p class="text-center text-xl font-bold p-2">Transaction History</p>
     <div class="w-full flex justify-center items-center">
