--- a/templates/sell.html
+++ b/templates/sell.html
@@ -9,7 +9,10 @@ Sell
     <div id="displaySellResponse" class="bg-slate-400 bg-opacity-50 w-full h-screen absolute top-0 left-0 z-10 flex items-center hidden justify-center"></div>
     <p class="text-center font-bold text-xl">Sell Shares</p>
     <div class=" relative w-full flex flex-col items-center gap-10 p-2">
-        <a href="/" class="absolute left-10"><img src="../assets/icons/back.svg" alt="back"></a>
+        <div class="absolute left-10 top-4">
+            <a href="/"><img src="../assets/icons/back.svg" alt="back" onmouseover="addText('add')" onmouseout="addText('remove')"></a>
+            <p id="homeButton" class="bg-black bg-opacity-80 text-white rounded-md p-0.5 mt-0.5 hidden">Home</p>
+        </div>
         <form id="sellForm" class="flex flex-col justify-center items-center gap-10 w-2/3 sm:w-3/5">
             <div class="w-full relative">
                 <label for="company_name" class="block text-slate-500 mb-2">Company</label>
@@ -20,6 +23,7 @@ Sell
                     class="bg-slate-200 px-2 overflow-auto flex flex-col items-start rounded-b-lg shadow-sm shadow-slate-800">
                 </div>
             </div>
+            <span id="loadingSign" class="loading loading-ring loading-lg"></span>
             <div class="w-full">
                 <label for="shares" class="block text-slate-500 mb-2">No. of shares</label>
                 <input type="number" name="shares" id="shares" placeholder="Input number of shares"
@@ -38,6 +42,7 @@ Sell
             let submitButton = document.querySelector("#submitButton");
             let sellForm = document.querySelector("#sellForm");
             let showSellResponse = document.querySelector("#displaySellResponse");
+            let loading_sign = document.querySelector("#loadingSign");
             const createElement = (element) => document.createElement(element);
             let companyNames;
 
@@ -53,7 +58,16 @@ Sell
             function enableForm() {
                 company_name.disabled = false;
                 shares.disabled = false;
-            }
+                loading_sign.classList.add("hidden");
+                }
+
+            function addText (text) {
+                if (text === "add") {
+                    homeButton.classList.remove("hidden");
+                } else {
+                    homeButton.classList.add("hidden");
+                }
+            };
 
             function displayNames() {
                 while (listNames.firstChild) {
