--- a/templates/register.html
+++ b/templates/register.html
@@ -31,7 +31,7 @@ Register
                 class="bg-slate-200 border border-purple-600 rounded-lg focus:border-2 focus:border-purple-800 focus:bg-slate-300 outline-none p-2 w-full">
                 <img id="confirmEyeImage" src="../assets/icons/eye_open.svg" alt="closed eye icon" onclick="toggleVisibility('confirm_password')" class="hover:cursor-pointer absolute top-0 right-0 m-2">
             </p>
-            <p id="displayError" class="hidden"></p>
+            <p id="displayConfirmError" class="hidden"></p>
         </div>
         <div class="flex items-center justify-center">
             <button type="button" id="submitButton"
